RESOLVED FIXED287404
REGRESSION(289552@main): [GTK] Web page content sometimes does not display
https://bugs.webkit.org/show_bug.cgi?id=287404
Summary REGRESSION(289552@main): [GTK] Web page content sometimes does not display
Michael Catanzaro
Reported 2025-02-10 06:52:28 PST
Since WebKitGTK 2.47.3, sometimes web page content does not display. I currently have three open youtube.com pages that are completely blank with nothing rendered except the web view background color. I have not found a reproducer, and I don't see any useful error messages or warnings in my system journal.
Attachments
Michael Catanzaro
Comment 1 2025-02-10 07:10:38 PST
OK, I just now finally managed to catch this while running in a terminal, and I can confirm there are no warning or error messages printed unfortunately.
Michael Catanzaro
Comment 2 2025-02-11 12:48:28 PST
I'm actually not completely certain whether this was introduced in 2.47.3 or 2.47.4.
Michael Catanzaro
Comment 3 2025-02-13 07:53:01 PST
This also happens very commonly on amazon.com.
Michael Catanzaro
Comment 4 2025-02-13 18:08:34 PST
I think I've found a reproducer: * On any YouTube video page, open another YouTube video page in a new tab * Do not switch to the new tab until after the page has loaded * Switch to the new tab. Nothing is rendered. If you switch to the new tab while it's still loading, then the page is consistently rendered fine. Otherwise, it's consistently not rendered at all.
Michael Catanzaro
Comment 5 2025-02-14 06:18:59 PST
Looks like this regressed in 2.47.4. I can reproduce in my development environment, so I'll probably be able to bisect. I notice one warning; not sure yet whether it's relevant: (WebKitWebProcess:2): GStreamer-WARNING **: 08:18:02.622: ../gst/gstpad.c:5397:store_sticky_event:<opusdec0:sink> Sticky event misordering, got 'caps' before 'stream-start'
Michael Catanzaro
Comment 6 2025-02-14 09:55:24 PST
That GStreamer warning is not related. This bug is caused by 289552@main "[CoordinatedGraphics] Replace TextureMapperPlatformLayerProxy with CoordinatedPlatformLayerBufferProxy"
Carlos Garcia Campos
Comment 7 2025-02-17 02:50:22 PST
EWS
Comment 8 2025-02-21 02:10:07 PST
Committed 290780@main (629c3dbe2f99): <https://commits.webkit.org/290780@main> Reviewed commits have been landed. Closing PR #40701 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.