REGRESSION(289552@main): [GTK] Web page content sometimes does not display https://bugs.webkit.org/show_bug.cgi?id=287404

Reviewed by Alejandro G. Castro.

The old proxy could only schedule a composition on new buffer after
the first composition. The new one doesn't have that limitation, but we
end up calling ThreadedCompositor::scheduleUpdate() before
ThreadedCompositor::requestComposition() so attributes are not
initialized. Then a composition is run, but it does nothing because the
view port size is empty, and the compositing run loop keeps blocked
because updateCompleted is never called. We should always update the
size attributes when the web page size or device scale factor change.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::setDeviceScaleFactor):
(WebKit::DrawingAreaCoordinatedGraphics::updateGeometry):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::flushLayers):
(WebKit::LayerTreeHost::sizeDidChange):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.cpp:
(WebKit::LayerTreeHost::sizeDidChange):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::setSize):
(WebKit::ThreadedCompositor::renderLayerTree):
(WebKit::ThreadedCompositor::requestComposition):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.h:

Canonical link: https://commits.webkit.org/290780@main