Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp
@@ -250,6 +250,8 @@ void DrawingAreaCoordinatedGraphics::backgroundColorDidChange()
 void DrawingAreaCoordinatedGraphics::setDeviceScaleFactor(float deviceScaleFactor, CompletionHandler<void()>&& completionHandler)
 {
     Ref { m_webPage.get() }->setDeviceScaleFactor(deviceScaleFactor);
+    if (m_layerTreeHost)
+        m_layerTreeHost->sizeDidChange();
     completionHandler();
 }
 
@@ -358,7 +360,7 @@ void DrawingAreaCoordinatedGraphics::updateGeometry(const IntSize& size, Complet
     webPage->layoutIfNeeded();
 
     if (m_layerTreeHost)
-        m_layerTreeHost->sizeDidChange(webPage->size());
+        m_layerTreeHost->sizeDidChange();
     else {
         m_dirtyRegion = IntRect(IntPoint(), size);
         UpdateInfo updateInfo;
